--- a/contact.html
+++ b/contact.html
@@ -128,6 +128,7 @@
 
                         </section>
                     </div>
+                    <script src="js/javascript.js"></script>
                     <div class="address">
                         <div class="contactTextBorder">
                             <p class="contactText">
