--- a/celebrationcakes.html
+++ b/celebrationcakes.html
@@ -19,7 +19,7 @@
     <!-- Links to stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
-    <script src="js/javascript.js"></script>
+    <script src="js/sidenav.js"></script>
 </head>
 
 <body>
@@ -70,6 +70,8 @@
                 <hr class="headinglinebreak">
 
                 <div class="galleryGrid">
+
+                    <script src="js/slideshow.js"></script>
 
                     <button class="popupbutton image-grid-row-2 image-grid-col-1" onclick="togglePopup('popup-1')"><img
                             src="images/celebrationcakes/HarryStyles/-C- Harry -1.jpg" alt="">
