--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <!-- Links to stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
-    <script src="js/javascript.js"></script>
+    <script src="js/sidenav.js"></script>
 </head>
 
 <body>
@@ -125,10 +125,9 @@
                                         name="Submit">Submit</button>
                                 </form>
                             </div>
-
                         </section>
+                        <script src="js/validateEmail.js"></script>
                     </div>
-                    <script src="js/javascript.js"></script>
                     <div class="address">
                         <div class="contactTextBorder">
                             <p class="contactText">
@@ -144,6 +143,7 @@
                     <div id="map">
                         <script async defer
                             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjgbBNNVeeFqRJHN475QrQEKhNqoKPBQo&callback=initMap"></script>
+                        <script src="js/initMap.js"></script>
                     </div>
                 </div>
                 <div class="bottomSpace"></div>
