--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -19,7 +19,7 @@
     <!-- Links to stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
-    <script src="js/javascript.js"></script>
+    <script src="js/sidenav.js"></script>
 </head>
 
 <body>
@@ -72,6 +72,8 @@
 
                 <div class="galleryGrid">
 
+                    <script src="js/slideshow.js"></script>
+
                     <button class="popupbutton image-grid-row-2 image-grid-col-1" onclick="togglePopup('popup-1')">
                         <img src="images/weddingcakes/May4th/-W- May4th -2.jpg" alt="">
                     </button>
@@ -81,12 +83,7 @@
                         <div class="overlay" onclick="togglePopup('popup-1')"></div>
                         <div class="content">
                             <div class="close-btn" onclick="togglePopup('popup-1')">&times;</div>
-
-
-                            <!--<img class="portrait" src="images/weddingcakes/May4th/-W- May4th -2.jpg" alt="">-->
-
                             <!-- Slideshow container -->
-
                             <div class="slideshow-container">
 
                                 <div class="mySlides fade">
@@ -111,7 +108,7 @@
                                 <span class="dot" onclick="currentSlide(2)"></span>
                                 <span class="dot" onclick="currentSlide(3)"></span>
                             </div>
-                            <script src="js/slideshow.js"></script>
+
 
                             <div class="popupheading">
                                 <h1>WEDDING CAKE&nbsp;&nbsp;|&nbsp;&nbsp;May The Fourth Be With You</h1>
