--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Links to stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
-    <script src="js/javascript.js"></script>
+    <script src="js/sidenav.js"></script>
 </head>
 
 <body>
