--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -72,6 +72,7 @@
 
                 <div class="galleryGrid">
 
+                    <script src="js/moreInformation.js"></script>
                     <script src="js/slideshow.js"></script>
 
                     <button class="popupbutton image-grid-row-2 image-grid-col-1" onclick="togglePopup('popup-1')">
