--- a/about.html
+++ b/about.html
@@ -22,80 +22,75 @@
     <script src="js/sidenav.js"></script>
 </head>
 
+
 <body>
 
-    <body>
-
-        <div class="sideNav">
-            <div class="logo"><a href="index.html"><img src="images/logoblack.png"
-                        alt="The Cake Company Ballyfin Logo"></a>
+    <div class="sideNav">
+        <div class="logo"><a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+        </div>
+        <nav aria-label="links" class="links">
+            <div class="home"><a href="index.html">Home</a></div>
+            <div class="about"><a class="current" href="about.html">About</a></div>
+            <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
+            <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a></div>
+            <div class="contact"><a href="contact.html">Contact</a></div>
+            <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
             </div>
-            <nav aria-label="links" class="links">
-                <div class="home"><a href="index.html">Home</a></div>
-                <div class="about"><a class="current" href="about.html">About</a></div>
-                <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a></div>
-                <div class="contact"><a href="contact.html">Contact</a></div>
-                <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
-                </div>
-            </nav>
-            <div class="social">
-                <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
-                            src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
-                <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
-                            src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+        </nav>
+        <div class="social">
+            <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
+                        src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
+            <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
+                        src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+        </div>
+    </div>
+
+    <div class="mobileNavContainer">
+        <div class="topNav">
+            <div class="logo">
+                <a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+            </div>
+            <div class="menuIcon">
+                <button class="hamburger">
+                    <div class="bar">
+                    </div>
+                </button>
             </div>
         </div>
+    </div>
 
-        <div class="mobileNavContainer">
-            <div class="topNav">
-                <div class="logo">
-                    <a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
-                </div>
-                <div class="menuIcon">
-                    <button class="hamburger">
-                        <div class="bar">
-                        </div>
-                    </button>
-                </div>
+    <div class="contentContainer">
+        <div class="content">
+            <div class="heading">
+                <h1>About</h1>
             </div>
+            <hr class="headinglinebreak">
+            <img id="aboutImg" src="images/about/-A- header.jpg" alt="">
+            <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
+                    class="colouredvbar">|</span><span class="smallSpace"> </span><i class="ballyfinItalic">ballyfin</i>
+                was established by Ann Tilson in 2015 ... following many
+                years
+                of passionate baking for friends and family.</p>
+            <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
+                    class="colouredvbar">|</span><span class="smallSpace"> </span><i class="ballyfinItalic">ballyfin</i>
+                designs and makes one-of-a-kind cakes for your special
+                occasion
+                … weddings … anniversaries … birthdays … &nbsp;christenings …</p>
+            <p class="abouttext">We will discuss your ideas on style and theme to realise the cake you want for you
+                celebration and you will be brought through the different cake flavour options.</p>
+            <p class="abouttext">Each cake is made in our studio using the best ingredients possible … 70% Belgian
+                chocolate … fresh free-range eggs … all combined with love and care.</p>
+            <p class="abouttext">The Cake Company<span class="smallSpace"> </span>
+                <span class="colouredvbar">|</span><span class="smallSpace"> </span>
+                <i class="ballyfinItalic">ballyfin</i> looks forward making a special
+                cake specially for you …
+            </p>
+            <div class="bottomSpace"></div>
         </div>
-
-        <div class="contentContainer">
-            <div class="content">
-                <div class="heading">
-                    <h1>About</h1>
-                </div>
-                <hr class="headinglinebreak">
-                <img id="aboutImg" src="images/about/-A- header.jpg" alt="">
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                        class="colouredvbar">|</span><span class="smallSpace"> </span><i
-                        class="ballyfinItalic">ballyfin</i>
-                    was established by Ann Tilson in 2015 ... following many
-                    years
-                    of passionate baking for friends and family.</p>
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span><span
-                        class="colouredvbar">|</span><span class="smallSpace"> </span><i
-                        class="ballyfinItalic">ballyfin</i>
-                    designs and makes one-of-a-kind cakes for your special
-                    occasion
-                    … weddings … anniversaries … birthdays … &nbsp;christenings …</p>
-                <p class="abouttext">We will discuss your ideas on style and theme to realise the cake you want for you
-                    celebration and you will be brought through the different cake flavour options.</p>
-                <p class="abouttext">Each cake is made in our studio using the best ingredients possible … 70% Belgian
-                    chocolate … fresh free-range eggs … all combined with love and care.</p>
-                <p class="abouttext">The Cake Company<span class="smallSpace"> </span>
-                    <span class="colouredvbar">|</span><span class="smallSpace"> </span>
-                    <i class="ballyfinItalic">ballyfin</i> looks forward making a special
-                    cake specially for you …
-                </p>
-                <div class="bottomSpace"></div>
-            </div>
-        </div>
-
-    </body>
-
+    </div>
 
 </body>
+
+
 
 </html>
