--- a/contact.html
+++ b/contact.html
@@ -22,138 +22,130 @@
     <script src="js/sidenav.js"></script>
 </head>
 
+
 <body>
 
-    <body>
-
-        <div class="sideNav">
-            <div class="logo"><a href="index.html"><img src="images/logoblack.png"
-                        alt="The Cake Company Ballyfin Logo"></a>
+    <div class="sideNav">
+        <div class="logo"><a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+        </div>
+        <nav aria-label="links" class="links">
+            <div class="home"><a href="index.html">Home</a></div>
+            <div class="about"><a href="about.html">About</a></div>
+            <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
+            <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
             </div>
-            <nav aria-label="links" class="links">
-                <div class="home"><a href="index.html">Home</a></div>
-                <div class="about"><a href="about.html">About</a></div>
-                <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
-                </div>
-                <div class="contact"><a class="current" href="contact.html">Contact</a></div>
-                <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
-                </div>
-            </nav>
-            <div class="social">
-                <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
-                            src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
-                <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
-                            src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+            <div class="contact"><a class="current" href="contact.html">Contact</a></div>
+            <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
+            </div>
+        </nav>
+        <div class="social">
+            <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
+                        src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
+            <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
+                        src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+        </div>
+    </div>
+
+    <div class="mobileNavContainer">
+        <div class="topNav">
+            <div class="logo">
+                <a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+            </div>
+            <div class="menuIcon">
+                <button class="hamburger">
+                    <div class="bar">
+                    </div>
+                </button>
             </div>
         </div>
+    </div>
 
-        <div class="mobileNavContainer">
-            <div class="topNav">
-                <div class="logo">
-                    <a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
-                </div>
-                <div class="menuIcon">
-                    <button class="hamburger">
-                        <div class="bar">
-                        </div>
-                    </button>
-                </div>
-            </div>
+    <div class="contentContainer">
+        <div class="heading">
+            <h1>Contact</h1>
         </div>
+        <hr class="headinglinebreak">
 
-        <div class="contentContainer">
-            <div class="content">
-                <div class="heading">
-                    <h1>Contact</h1>
-                </div>
-                <hr class="headinglinebreak">
-
-                <div class="contactGrid">
-                    <div class="form">
-                        <section class="contactForm">
-                            <div class="formContainer">
-                                <form action="https://formsubmit.co/2052393518a89dc065cc1c4882e52cb9 " method="POST">
-                                    <!--Name input-->
-                                    <div class="form-group">
-                                        <label for="name"><span class="requiredStar">*</span>Name</label><br>
-                                        <input class="forminput" type="text" id="name" name="firstName"
-                                            placeholder="First" required>
-                                        <input class="forminput" type="text" id="name" name="lastName"
-                                            placeholder="Last" required>
-                                    </div>
-                                    <!--Email input-->
-                                    <div class="form-group">
-                                        <label for="email"><span class="requiredStar">*</span>E-mail</label><br>
-                                        <input class="forminput" type="email" id="email" onselectstart="return false"
-                                            oncut="return false" oncopy="return false" onpaste="return false"
-                                            ondrag="return false" ondrop="return false" name="email"
-                                            placeholder="example@example.com" placeholder="example@example.com"
-                                            required>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="confirmEmail"><span class="requiredStar">*</span>Confirm
-                                            E-mail</label><br>
-                                        <input class="forminput" type="email" id="confirmEmail"
-                                            onselectstart="return false" oncut="return false" oncopy="return false"
-                                            onpaste="return false" ondrag="return false" ondrop="return false"
-                                            autocomplete="nope" name="email" placeholder="example@example.com" required>
-                                    </div>
-
-                                    <!--Number input-->
-                                    <div class="form-group">
-                                        <label for="mobileNumber"><span class="requiredStar">*</span>Mobile
-                                            number</label><br>
-                                        <input class="forminput" type="tel" id="mobileNumber" name="mobileNumber"
-                                            required>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="landlineNumber">Landline number</label><br>
-                                        <input class="forminput" type="tel" id="landlineNumber" name="landlineNumber">
-                                    </div>
-
-                                    <!--Message input-->
-                                    <div class="form-group">
-                                        <label for="message"><span class="requiredStar">*</span>Message</label>
-                                        <textarea class="forminput" name="message" placeholder="Type message here..."
-                                            required rows="4" cols="70"></textarea>
-                                    </div>
-
-                                    <button onclick="return validateEmail();" type="submit"
-                                        name="Submit">Submit</button>
-                                </form>
+        <div class="contactGrid">
+            <div class="form">
+                <section class="contactForm">
+                    <div class="formContainer">
+                        <form action="https://formsubmit.co/2052393518a89dc065cc1c4882e52cb9 " method="POST">
+                            <!--Name input-->
+                            <div class="form-group">
+                                <label for="name"><span class="requiredStar">*</span>Name</label><br>
+                                <input class="forminput" type="text" id="name" name="firstName" placeholder="First"
+                                    required>
+                                <input class="forminput" type="text" id="name" name="lastName" placeholder="Last"
+                                    required>
                             </div>
-                        </section>
-                        <script src="js/validateEmail.js"></script>
+                            <!--Email input-->
+                            <div class="form-group">
+                                <label for="email"><span class="requiredStar">*</span>E-mail</label><br>
+                                <input class="forminput" type="email" id="email" onselectstart="return false"
+                                    oncut="return false" oncopy="return false" onpaste="return false"
+                                    ondrag="return false" ondrop="return false" name="email"
+                                    placeholder="example@example.com" placeholder="example@example.com" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="confirmEmail"><span class="requiredStar">*</span>Confirm
+                                    E-mail</label><br>
+                                <input class="forminput" type="email" id="confirmEmail" onselectstart="return false"
+                                    oncut="return false" oncopy="return false" onpaste="return false"
+                                    ondrag="return false" ondrop="return false" autocomplete="nope" name="email"
+                                    placeholder="example@example.com" required>
+                            </div>
+
+                            <!--Number input-->
+                            <div class="form-group">
+                                <label for="mobileNumber"><span class="requiredStar">*</span>Mobile
+                                    number</label><br>
+                                <input class="forminput" type="tel" id="mobileNumber" name="mobileNumber" required>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="landlineNumber">Landline number</label><br>
+                                <input class="forminput" type="tel" id="landlineNumber" name="landlineNumber">
+                            </div>
+
+                            <!--Message input-->
+                            <div class="form-group">
+                                <label for="message"><span class="requiredStar">*</span>Message</label>
+                                <textarea class="forminput" name="message" placeholder="Type message here..." required
+                                    rows="4" cols="70"></textarea>
+                            </div>
+
+                            <button onclick="return validateEmail();" type="submit" name="Submit">Submit</button>
+                        </form>
                     </div>
-                    <div class="address">
-                        <div class="contactTextBorder">
-                            <p class="contactText">
-                                The Cake Company Ballyfin,<br>
-                                Ballylusk,<br>
-                                Ballyfin,<br>
-                                Co. Laois.<br>
-                                R32 V3V6<br>
-                                <a class="smallPhone" href="tel:=057 875 5992">057 8755992</a><br>
-                            </p>
-                        </div>
-                    </div>
-                    <div id="map">
-                        <script async defer
-                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjgbBNNVeeFqRJHN475QrQEKhNqoKPBQo&callback=initMap"></script>
-                    </div>
-                    <script src="js/initMap.js"></script>
-                </div>
-                <div class="bottomSpace"></div>
+                </section>
+                <script src="js/validateEmail.js"></script>
             </div>
-
+            <div class="address">
+                <div class="contactTextBorder">
+                    <p class="contactText">
+                        The Cake Company Ballyfin,<br>
+                        Ballylusk,<br>
+                        Ballyfin,<br>
+                        Co. Laois.<br>
+                        R32 V3V6<br>
+                        <a class="smallPhone" href="tel:=057 875 5992">057 8755992</a><br>
+                    </p>
+                </div>
+            </div>
+            <div id="map">
+                <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjgbBNNVeeFqRJHN475QrQEKhNqoKPBQo&callback=initMap"></script>
+            </div>
+            <script src="js/initMap.js"></script>
         </div>
+        <div class="bottomSpace"></div>
 
-    </body>
-
+    </div>
 
 </body>
+
+
 
 </html>
