--- a/weddingresources.html
+++ b/weddingresources.html
@@ -22,60 +22,57 @@
     <script src="js/sidenav.js"></script>
 </head>
 
+
 <body>
 
-    <body>
-
-        <div class="sideNav">
-            <div class="logo"><a href="index.html"><img src="images/logoblack.png"
-                        alt="The Cake Company Ballyfin Logo"></a>
+    <div class="sideNav">
+        <div class="logo"><a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+        </div>
+        <nav aria-label="links" class="links">
+            <div class="home"><a href="index.html">Home</a></div>
+            <div class="about"><a href="about.html">About</a></div>
+            <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
+            <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
             </div>
-            <nav aria-label="links" class="links">
-                <div class="home"><a href="index.html">Home</a></div>
-                <div class="about"><a href="about.html">About</a></div>
-                <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
-                <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
-                </div>
-                <div class="contact"><a href="contact.html">Contact</a></div>
-                <div class="weddingResources"><a class="current" href="weddingresources.html">Wedding Resources</a>
-                </div>
-            </nav>
-            <div class="social">
-                <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
-                            src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
-                <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
-                            src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+            <div class="contact"><a href="contact.html">Contact</a></div>
+            <div class="weddingResources"><a class="current" href="weddingresources.html">Wedding Resources</a>
+            </div>
+        </nav>
+        <div class="social">
+            <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
+                        src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
+            <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
+                        src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+        </div>
+    </div>
+
+    <div class="mobileNavContainer">
+        <div class="topNav">
+            <div class="logo">
+                <a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+            </div>
+            <div class="menuIcon">
+                <button class="hamburger">
+                    <div class="bar">
+                    </div>
+                </button>
             </div>
         </div>
+    </div>
 
-        <div class="mobileNavContainer">
-            <div class="topNav">
-                <div class="logo">
-                    <a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
-                </div>
-                <div class="menuIcon">
-                    <button class="hamburger">
-                        <div class="bar">
-                        </div>
-                    </button>
-                </div>
+    <div class="contentContainer">
+        <div class="content">
+            <div class="heading">
+                <h1>Wedding Resources</h1>
             </div>
+            <hr class="headinglinebreak">
+
+            <div class="bottomSpace"></div>
         </div>
-
-        <div class="contentContainer">
-            <div class="content">
-                <div class="heading">
-                    <h1>Wedding Resources</h1>
-                </div>
-                <hr class="headinglinebreak">
-
-                <div class="bottomSpace"></div>
-            </div>
-        </div>
-
-    </body>
-
+    </div>
 
 </body>
+
+
 
 </html>
