--- a/celebrationcakes.html
+++ b/celebrationcakes.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
     <script src="js/sidenav.js"></script>
+    <script src="js/popUp.js"></script>
 </head>
 
 
@@ -68,9 +69,6 @@
             <hr class="headinglinebreak">
 
             <div class="galleryGrid">
-
-                <script src="js/moreInformation.js"></script>
-                <script src="js/slideshow.js"></script>
 
                 <button class="popupbutton image-grid-row-2 image-grid-col-1" onclick="togglePopup('popup-1')"><img
                         src="images/celebrationcakes/HarryStyles/-C- Harry -1.jpg" alt="">
@@ -1215,6 +1213,7 @@
 
 
             </div>
+            <script src="js/slideshow.js"></script>
 
             <div class="bottomSpace"></div>
         </div>
