--- a/weddingcakes.html
+++ b/weddingcakes.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
     <script src="js/sidenav.js"></script>
+    <script src="js/popUp.js"></script>
 </head>
 
 
@@ -70,8 +71,7 @@
 
             <div class="galleryGrid">
 
-                <script src="js/slideshow.js"></script>
-                <script src="js/moreInformation.js"></script>
+
 
                 <button class="popupbutton image-grid-row-2 image-grid-col-1" onclick="togglePopup('popup-1')">
                     <img src="images/weddingcakes/May4th/-W- May4th -2.jpg" alt="">
@@ -615,6 +615,7 @@
                 </div>
 
             </div>
+            <script src="js/slideshow.js"></script>
 
             <div class="bottomSpace"></div>
         </div>
