--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
     <script src="js/sidenav.js"></script>
+    <script src="js/popUp.js"></script>
+    <script src="js/validateEmail.js"></script>
 </head>
 
 
@@ -120,7 +122,6 @@
                         </form>
                     </div>
                 </section>
-                <script src="js/validateEmail.js"></script>
             </div>
             <div class="address">
                 <div class="contactTextBorder">
