--- a/weddingresources.html
+++ b/weddingresources.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
     <script src="js/sidenav.js"></script>
+    <script src="js/popUp.js"></script>
 </head>
 
 
@@ -66,10 +67,163 @@
                 <h1>Wedding Resources</h1>
             </div>
             <hr class="headinglinebreak">
+            <div class="weddingResourcesGrid">
+
+                <div class="squareBorder">
+                    <div class="imageContainer">
+                        <button class="popupbutton" onclick="togglePopup('popup-1')">
+                            <img src="images/weddingresources/weddingband/weddingBand.jpg" alt="">
+                        </button>
+                    </div>
+
+                    <div class="textContainer">
+                        <div class="weddingResourcesHeading">
+                            <h1 onclick="togglePopup('popup-1')">Wedding Band</h1>
+                        </div>
+                    </div>
+
+                    <div class="popup" id="popup-1">
+                        <div class="overlay" onclick="togglePopup('popup-1')"></div>
+                        <div class="content">
+                            <div class="close-btn" onclick="togglePopup('popup-1')">&times;</div>
+
+                            <!-- Slideshow container -->
+                            <div class="slideshow-container">
+
+                                <div class="slides">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                </div>
+
+                                <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+
+                                <div class="dots">
+                                    <span class="dot" onclick="currentSlide(1, 0)"></span>
+                                    <span class="dot" onclick="currentSlide(2, 0)"></span>
+                                    <span class="dot" onclick="currentSlide(3, 0)"></span>
+                                </div>
+                            </div>
+
+                            <div class="popupheading">
+                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Wedding Band</h1>
+                            </div>
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="squareBorder">
+                    <div class="imageContainer">
+                        <button class="popupbutton" onclick="togglePopup('popup-2')">
+                            <img src="images/weddingresources/florist/florist.jpg" alt="">
+                        </button>
+                    </div>
+
+                    <div class="textContainer">
+                        <div class="weddingResourcesHeading">
+                            <h1 onclick="togglePopup('popup-2')">Florist</h1>
+                        </div>
+                    </div>
+
+                    <div class="popup" id="popup-2">
+                        <div class="overlay" onclick="togglePopup('popup-2')"></div>
+                        <div class="content">
+                            <div class="close-btn" onclick="togglePopup('popup-2')">&times;</div>
+
+                            <!-- Slideshow container -->
+                            <div class="slideshow-container">
+
+                                <div class="slides">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                </div>
+
+                                <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+
+                                <div class="dots">
+                                    <span class="dot" onclick="currentSlide(1, 1)"></span>
+                                    <span class="dot" onclick="currentSlide(2, 1)"></span>
+                                    <span class="dot" onclick="currentSlide(3, 1)"></span>
+                                </div>
+                            </div>
+
+                            <div class="popupheading">
+                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Florist</h1>
+                            </div>
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="squareBorder">
+                    <div class="imageContainer">
+                        <button class="popupbutton" onclick="togglePopup('popup-3')">
+                            <img src="images/weddingresources/photographer/photographer.jpg" alt="">
+                        </button>
+                    </div>
+
+                    <div class="textContainer">
+                        <div class="weddingResourcesHeading">
+                            <h1 onclick="togglePopup('popup-3')">Photographer</h1>
+                        </div>
+                    </div>
+
+                    <div class="popup" id="popup-3">
+                        <div class="overlay" onclick="togglePopup('popup-3')"></div>
+                        <div class="content">
+                            <div class="close-btn" onclick="togglePopup('popup-3')">&times;</div>
+
+                            <!-- Slideshow container -->
+                            <div class="slideshow-container">
+
+                                <div class="slides">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                    <img class="mySlides fade portrait"
+                                        src="images/weddingcakes/SaltedCaramelCake/-W- SaltedCaramelCake -1.jpg" alt="">
+                                </div>
+
+                                <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+
+                                <div class="dots">
+                                    <span class="dot" onclick="currentSlide(1, 2)"></span>
+                                    <span class="dot" onclick="currentSlide(2, 2)"></span>
+                                    <span class="dot" onclick="currentSlide(3, 2)"></span>
+                                </div>
+                            </div>
+
+                            <div class="popupheading">
+                                <h1>WEDDING RESOURCES&nbsp;&nbsp;|&nbsp;&nbsp;Photographer</h1>
+                            </div>
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <script src="js/slideshow.js"></script>
 
             <div class="bottomSpace"></div>
         </div>
-    </div>
 
 </body>
 
