--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,8 @@
     <!-- Links to stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Links to javascript -->
-    <script src="js/sidenav.js"></script>
-    <script src="js/popUp.js"></script>
-    <script src="js/validateEmail.js"></script>
+    <script src="js/validateEmail.js" defer></script>
+    <script src="js/sidenav.js" defer></script>
 </head>
 
 
@@ -34,8 +33,7 @@
             <div class="home"><a href="index.html">Home</a></div>
             <div class="about"><a href="about.html">About</a></div>
             <div class="weddingCakes"><a href="weddingcakes.html">Wedding Cakes</a></div>
-            <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a>
-            </div>
+            <div class="celebrationCakes"><a href="celebrationcakes.html">Celebration Cakes</a></div>
             <div class="contact"><a class="current" href="contact.html">Contact</a></div>
             <div class="weddingResources"><a href="weddingresources.html">Wedding Resources</a>
             </div>
