--- a/about.html
+++ b/about.html
@@ -26,7 +26,10 @@
 <body>
 
     <div class="sideNav">
-        <div class="logo"><a href="index.html"><img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo"></a>
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/logoblack.png" alt="The Cake Company Ballyfin Logo">
+            </a>
         </div>
         <nav aria-label="links" class="links">
             <div class="home"><a href="index.html">Home</a></div>
@@ -38,10 +41,14 @@
             </div>
         </nav>
         <div class="social">
-            <div class="instagram"><a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
-                        src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a></div>
-            <div class="facebook"><a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
-                        src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a></div>
+            <div class="instagram">
+                <a href="https://www.instagram.com/thecakecompanyballyfin/" target="_blank"><img
+                        src="images/socialmedia/instagram_icon.svg" alt="Instagram"></a>
+            </div>
+            <div class="facebook">
+                <a href="https://www.facebook.com/TheCakeCompanyBallyfin" target="_blank"><img
+                        src="images/socialmedia/facebook_icon.svg" alt="Facebook"></a>
+            </div>
         </div>
     </div>
 
